--- a/cadastro.html
+++ b/cadastro.html
@@ -3,24 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cadastro - Graduados UEMG</title>
+    <title>Graduados UEMG | Cadastro</title>
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      href="css/bootstrap.min.css"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/style.css" />
+     <link rel="shortcut icon" href="assets/logo.png" type="imagex/png" />
   </head>
   <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
       <div class="container">
         <a class="navbar-brand" href="index.html">
           <img
-            src="https://via.placeholder.com/40"
+            style="width: 55px"
+            src="assets/logo.png"
             alt="Logo UEMG"
             class="d-inline-block align-text-top me-2"
           />
-          Graduados UEMG
         </a>
         <button
           class="navbar-toggler"
@@ -262,8 +263,8 @@
     </div>
 
     <!-- Scripts -->
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="js/jquery-3.7.1.min.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/json-loader.js"></script>
     <script src="js/script.js"></script>
   </body>
