feat: ajuste tititulo da pagina da rota timeline

--- a/timeline.html
+++ b/timeline.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Linha do Tempo - Graduados UEMG</title>
+    <title>Graduados UEMG | Linha do tempo</title>
     <link
       href="css/bootstrap.min.css"
       rel="stylesheet"
